@@ -17,6 +17,7 @@ port = 5000
 
 [app:main]
 use = egg:fookebox
+lang = de
 full_stack = true
 static_files = true
 
@@ -30,6 +31,7 @@ sqlalchemy.url = sqlite:///%(cache_dir)s/fookebox.sqlite
 site_name = fookebox
 #mpd_port = 6601
 find_over_search = true
+max_queue_length = 1
 
 album_cover_path = /home/stefan/.cache/rhythmbox/covers/
 # If you'd like to fine-tune the individual locations of the cache data dirs
