@@ -16,6 +16,7 @@ port = 5000
 
 [app:main]
 use = egg:fookebox
+#lang = de
 full_stack = true
 static_files = true
 
