@@ -1,5 +1,5 @@
 <div id="playlist">
-	<h2><img src="img/queue.png" /> Queue</h2>
+	<h2><img src="img/queue.png" /> ${_('Queue')}</h2>
 	<ol>
 % for i in range(0, int(config.get('max_queue_length'))):
 		<li>&nbsp;</li>
