@@ -1,6 +1,6 @@
 <%inherit file="base.tpl"/>
 <div id="now">
-	<span class="label">now playing</span><br />
+	<span class="label">${_('now playing')}</span><br />
 	<span id="currentTitle"><img src="img/progress.gif" alt="" /></span>
 </div>
 <div class="state">
@@ -9,7 +9,7 @@
 	</span>
 </div>
 <div id="next" style="display: none">
-	<span class="label">coming up</span><br />
+	<span class="label">${_('coming up')}</span><br />
 	<span id="nextTitle"></span>
 	<br /><span class="time">@<span id="nextTime"></span></span>
 </div>
